--- a/app/assets/stylesheets/animation__phone.scss
+++ b/app/assets/stylesheets/animation__phone.scss
@@ -67,6 +67,7 @@
     overflow: hidden;
     font-family: 'Raleway', sans-serif;
     font-size: 3.5vmin;
+    text-align: left;
     animation: mac 3s 1s forwards;
     writing-mode: horizontal-tb;
   }
@@ -88,6 +89,7 @@
     font-family: 'Raleway', sans-serif;
     font-size: 3.5vmin;
     float: left;
+    text-align: left;
     animation: miller 3s 1s forwards;
     writing-mode: horizontal-tb;
   }
