--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -20,6 +20,16 @@
     z-index: 20;
   }
 
+  .artists {
+    position: absolute;
+    top: 2%;
+    left: 15%;
+    height: 8%;
+    width: 100%;
+    font-family: 'Raleway', sans-serif;
+    color: black;
+  }
+
   .random__mac {
     position: absolute;
     top: 10%;
