--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -84,8 +84,7 @@
 }
 
 .cudi__link:hover {
-  background: black;
-  color: white;
+  color: #F0E4E4;
 }
 
 .mac__link {
@@ -100,8 +99,7 @@
 }
 
 .mac__link:hover {
-  background: black;
-  color: white;
+  color: #F0E4E4;
 }
 
 .five {
