--- a/app/assets/stylesheets/animation.scss
+++ b/app/assets/stylesheets/animation.scss
@@ -13,7 +13,7 @@
   right: 5%;
 }
 
-.first__m {
+.first__mac {
   position: absolute;
   left: 40%;
   top: 45%;
@@ -24,7 +24,54 @@
   font-family: 'Raleway', sans-serif;
 }
 
-.first__m--active {
+.first__cudi {
+  position: absolute;
+  left: 40%;
+  top: 45%;
+  font-size: 4vmin;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+}
+
+.first__cudi--active {
+  position: absolute;
+  left: 40%;
+  top: 45%;
+  font-size: 4vmin;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+  animation: firstK 1s forwards;
+}
+
+.second__cudi {
+  position: absolute;
+  left: 45%;
+  top: 45%;
+  font-size: 4vmin;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+  animation: secondC 1s forwards;
+}
+
+.second__cudi--active {
+  position: absolute;
+  left: 45%;
+  top: 45%;
+  font-size: 4vmin;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+  animation: secondC 1s forwards;
+}
+
+.first__mac--active {
   position: absolute;
   left: 40%;
   top: 30%;
@@ -35,7 +82,7 @@
   animation: first 1s forwards;
 }
 
-.second__m {
+.second__mac {
   position: absolute;
   left: 48%;
   top: 45%;
@@ -46,7 +93,7 @@
   cursor: pointer;
 }
 
-.second__m--active {
+.second__mac--active {
   position: absolute;
   left: 48%;
   top: 30%;
@@ -56,7 +103,7 @@
   animation: second 1s forwards;
 }
 
-.mac--active {
+.AC--active {
   position: absolute;
   left: 23.5%;
   top: 25%;
@@ -70,14 +117,14 @@
   text-orientation: upright;
 }
 
-.mac {
+.AC {
   position: absolute;
   height: 0%;
   width: 0%;
   overflow: hidden;
 }
 
-.miller--active {
+.ILLER--active {
   position: absolute;
   left: 54.2%;
   top: 25%;
@@ -91,14 +138,14 @@
   text-orientation: upright;
 }
 
-.miller {
+.ILLER {
   position: absolute;
   height: 0%;
   width: 0%;
   overflow: hidden;
 }
 
-.memento--active {
+.EMENTO--active {
   position: absolute;
   left: 30%;
   top: 8.5%;
@@ -110,21 +157,21 @@
   animation: memento 3.5s 1s forwards;
 }
 
-.memento {
+.EMENTO {
   position: absolute;
   height: 0%;
   width: 0%;
   overflow: hidden;
 }
 
-.mori {
+.ORI {
   position: absolute;
   height: 0%;
   width: 0%;
   overflow: hidden;
 }
 
-.mori--active {
+.ORI--active {
   position: absolute;
   left: 60%;
   top: 8.5%;
@@ -134,6 +181,44 @@
   font-family: 'Raleway', sans-serif;
   font-size: 3vmin;
   animation: memento 3s 1s forwards;
+}
+
+.ID--active {
+  position: absolute;
+  left: 39.5%;
+  top: 48%;
+  height: auto;
+  width: 0%;
+  overflow: hidden;
+  font-family: 'Raleway', sans-serif;
+  font-size: 3vmin;
+  animation: memento 3.5s 1s forwards;
+}
+
+.ID {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.UDI {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.UDI--active {
+  position: absolute;
+  left: 52%;
+  top: 48%;
+  height: auto;
+  width: 0%;
+  overflow: hidden;
+  font-family: 'Raleway', sans-serif;
+  font-size: 3vmin;
+  animation: memento 4s 1s forwards;
 }
 
 @keyframes first {
@@ -191,5 +276,45 @@
     }
     to {
       width: 5%;
+    }
+}
+
+@keyframes firstK {
+    from {
+        top: 45%;
+        left: 40%;
+    }
+    to {
+      top: 45%;
+      left: 35%;
+    }
+}
+
+@keyframes secondC {
+    from {
+        top: 45%;
+        left: 48%;
+    }
+    to {
+      top: 45%;
+      left: 48%;
+    }
+}
+
+@keyframes kid {
+    from {
+        width: 0%;
+    }
+    to {
+      width: 20%;
+    }
+}
+
+@keyframes cudi {
+    from {
+        width: 0%;
+    }
+    to {
+      width: 30%;
     }
 }
