Finish new home page

--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -38,6 +38,17 @@
   border: solid .5px black;
 }
 
+.random__chance {
+  position: absolute;
+  top: 10%;
+  left: 4%;
+  height: 80vmin;
+  width: 80vmin;
+  border-radius: 50%;
+  background: black;
+  border: solid .5px black;
+}
+
 .random__cudi {
   position: absolute;
   top: 10%;
