--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,7 +7,7 @@
 
 .home__wheel {
     position: absolute;
-    top: 10%;
+    top: 17%;
     left: 4%;
     height: 80vmin;
     width: 80vmin;
@@ -24,7 +24,7 @@
     left: 31%;
     color: black;
     font-size: 5vmin;
-    z-index: 15;
+    z-index: 45;
     text-align: center;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
@@ -137,6 +137,10 @@
   cursor: pointer;
 }
 
+.mac:hover {
+  border: solid 1px #6DEA75;
+}
+
 .cudi {
   position: absolute;
   right: 3%;
@@ -145,6 +149,10 @@
   width: 22%;
   z-index: 12;
   cursor: pointer;
+}
+
+.cudi:hover {
+  border: solid 1px #6DEA75;
 }
 
 .travis {
@@ -157,6 +165,10 @@
   cursor: pointer;
 }
 
+.travis:hover {
+  border: solid 1px #6DEA75;
+}
+
 .chance {
   position: absolute;
   left: 3%;
@@ -164,7 +176,12 @@
   height: 22%;
   width: 22%;
   z-index: 12;
+  font-size: 1.5vmin;
   cursor: pointer;
+}
+
+.chance:hover {
+  border: solid 1px #6DEA75;
 }
 
 .home__icon {
@@ -174,14 +191,105 @@
   top: 0%;
 }
 
-.artist__name {
+.artist__name--cudi {
   position: absolute;
   color: white;
   text-align: center;
   font-family: 'Raleway', sans-serif;
-  top: 85%;
+  top: 80%;
+  font-size: 2.2vmin;
   height: auto;
   width: 100%;
+}
+
+.artist__name--mac {
+  position: absolute;
+  color: white;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  top: 80%;
+  font-size: 2.2vmin;
+  height: auto;
+  width: 100%;
+}
+
+.artist__name--travis {
+  position: absolute;
+  color: white;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  top: 80%;
+  font-size: 2.2vmin;
+  height: auto;
+  width: 100%;
+}
+
+.artist__name--chance {
+  position: absolute;
+  color: white;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  top: 80%;
+  height: auto;
+  font-size: 1.8vmin;
+  width: 100%;
+}
+
+.title__info {
+  position: absolute;
+  left: 55%;
+  top: 35%;
+  background: #FBFDFB;
+  height: auto;
+  width: 75vmin;
+}
+
+.title__description {
+  position: absolute;
+  left: 0%;
+  top: 20%;
+  height: auto;
+  font-size: 7vmin;
+  width: 100%;
+  font-style: bold underline;
+  text-align: center;
+  background: #FBFDFB;
+  font-family: 'Raleway', sans-serif;
+}
+
+.title__name--active {
+  position: absolute;
+  left: 55%;
+  top: 20%;
+  height: 15%;
+  width: 75vmin;
+  font-size: 8vmin;
+  border-bottom: solid 1px black;
+  font-style: bold;
+  text-align: center;
+  background: #FBFDFB;
+  font-family: 'Raleway', sans-serif;
+}
+
+.title__main {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  height: auto;
+  font-size: 10vmin;
+  width: 100%;
+  font-style: bold underline;
+  text-align: center;
+  background: #FBFDFB;
+  font-family: 'Raleway', sans-serif;
+  border-bottom: solid 1px black;
+}
+
+.title__name {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
 }
 
 @keyframes mac_home {
