--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -26,6 +26,7 @@
     left: 0%;
     height: 8%;
     width: 100%;
+    font-size: 2.5vmin;
     font-family: 'Raleway', sans-serif;
     color: black;
   }
