--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -27,6 +27,15 @@
   color: black;
 }
 
+.home__link {
+  margin-left: 0.75%;
+  color: black;
+}
+
+.home__link:hover {
+  color: #F0E4E4;
+}
+
 .random__mac {
   position: absolute;
   top: 10%;
