--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -42,6 +42,15 @@
     float: left;
   }
 
+  .home__link {
+    margin-left: 0.75%;
+    color: black;
+  }
+
+  .home__link:hover {
+    color: #F0E4E4;
+  }
+
   .links:hover {
     color: #F0E4E4;
   }
