--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -444,12 +444,22 @@
 .songs__hover {
   position: absolute;
   top: 20%;
-  height: 80%;
+  height: 70%;
   width: 100%;
   background: white;
   color: red;
   z-index: 20;
   overflow: scroll;
+}
+
+.play__next {
+  position: absolute;
+  top: 40%;
+  height: 30%;
+  width: 50%;
+  background: red;
+  right: -10%;
+  z-index: 30;
 }
 
 .tracks {
