--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -481,12 +481,9 @@
 
 .play__next {
   position: absolute;
-  top: 40%;
-  height: 30%;
-  width: 50%;
-  background: red;
-  right: -10%;
-  z-index: 30;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
 }
 
 .tracks {
@@ -498,6 +495,7 @@
   font-size: 2vmin;
   font-family: 'Raleway', sans-serif;
   cursor: pointer;
+  width: 100%;
 }
 
 .tracks:hover {
