--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -20,6 +20,67 @@
     z-index: 20;
   }
 
+  .songs__queue {
+    position: absolute;
+    top: 130%;
+    left: 5%;
+    width: 90%;
+    text-align: center;
+    height: 20%;
+    overflow: scroll;
+  }
+
+  .queue__title {
+    position: absolute;
+    height: 20%;
+    width: 100%;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 4vmin;
+  }
+
+  .queued__tracks {
+    position: relative;
+    top: 5%;
+    height: 25%;
+    width: 100%;
+    margin-top: 10%;
+  }
+
+  .queued__song--mobile {
+    position: absolute;
+    height: auto;
+    width: auto;
+    top: 55%;
+    left: 35%;
+    color: black;
+    font-size: 2vmin;
+    z-index: 15;
+    text-align: center;
+    cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+  }
+
+  .queued__song--desktop {
+    position: absolute;
+    height: 0%;
+    width: 0%;
+    overflow: hidden;
+  }
+
+  .click__song {
+    position: absolute;
+    height: auto;
+    width: auto;
+    top: 58.5%;
+    left: 35.5%;
+    color: black;
+    font-size: 2vmin;
+    z-index: 15;
+    cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+  }
+
   .artists {
     position: absolute;
     top: 2%;
