--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -529,6 +529,12 @@
   font-family: 'Raleway', sans-serif;
   cursor: pointer;
   width: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+ -khtml-user-select: none;
+ -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .tracks:hover {
