--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -441,6 +441,12 @@
     font-size: 2vmin;
     font-family: 'Raleway', sans-serif;
     cursor: pointer;
+    -webkit-touch-callout: default;
+    -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   .tracks:hover {
