Hold touch did not work on iphone this is a good work around to add q

--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -542,8 +542,15 @@
 }
 
 .tracks:hover {
-  background: darkgrey;
+  background: black;
   color: white;
+}
+
+.song__next--mobile {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
 }
 
 .six {
