--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -435,11 +435,15 @@
   .tracks {
     position: relative;
     margin-top: 5%;
+    float: left;
     color: black;
+    display: inline-block;
     background-color: white;
     z-index: 19;
     font-size: 2vmin;
     font-family: 'Raleway', sans-serif;
+    left: 0%;
+    width: 100%;
     cursor: pointer;
     -webkit-touch-callout: default;
     -webkit-user-select: none;
@@ -447,6 +451,19 @@
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
+  }
+
+  .song__next--mobile {
+    position: relative;
+    text-align: center;
+    height: auto;
+    width: 100%;
+    font-size: 2vmin;
+    font-family: 'Raleway', sans-serif;
+    cursor: pointer;
+    color: black;
+    background: #EAE8E8;
+    overflow: hidden;
   }
 
   .tracks:hover {
