--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -17,12 +17,19 @@
   right: 5%;
 }
 
-.songs__queue {
+.songs__queue--active {
   position: absolute;
   top: 77%;
   right: 5%;
   width: 35%;
   height: 20%;
+  overflow: scroll;
+}
+
+.songs__queue-- {
+  position: absolute;
+  height: 0%;
+  width: 0%;
   overflow: scroll;
 }
 
@@ -41,6 +48,7 @@
   height: 25%;
   width: 100%;
   margin-top: 10%;
+  cursor: pointer;
 }
 
 .queued__song--desktop {
