--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -20,13 +20,20 @@
     z-index: 20;
   }
 
-  .songs__queue {
+  .songs__queue--active {
     position: absolute;
     top: 145%;
     left: 5%;
     width: 90%;
     text-align: center;
     height: 20%;
+    overflow: scroll;
+  }
+
+  .songs__queue-- {
+    position: absolute;
+    height: 0%;
+    width: 0%;
     overflow: scroll;
   }
 
