Logic to remove names from queue when song ends

--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
+.white {
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+
 .youtube-- {
   position: absolute;
   top: 30%;
