--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -2,6 +2,13 @@
   @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
   @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
+  .white {
+    position: absolute;
+    overflow: hidden;
+    height: 200%;
+    width: 100%;
+  }
+
   .youtube-- {
     position: absolute;
     top: 30%;
