--- a/app/assets/stylesheets/video_tablet.scss
+++ b/app/assets/stylesheets/video_tablet.scss
@@ -1,6 +1,13 @@
 @media screen and (min-width:701px) and (max-width:1025px){
   @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
+  .white {
+    position: absolute;
+    overflow: hidden;
+    height: 200%;
+    width: 100%;
+  }
+
   .youtube-- {
     position: absolute;
     top: 30%;
