--- a/app/assets/stylesheets/animation_tablet.scss
+++ b/app/assets/stylesheets/animation_tablet.scss
@@ -2,8 +2,9 @@
 
   .animation__box--active {
     position: absolute;
-    height: 0%;
-    width: 0%;
+    top: 43%;
+    height: 10%;
+    width: 100%;
     overflow: hidden;
   }
 
