--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,5 +39,8 @@
   <%= javascript_pack_tag 'application' %>
 
   <%= yield :extra_footer %>
+  <%- if params[:name] == nil -%>
+    <h2 id="demo2" class="circle__text">MAC MILLER | KID CUDI | TRAVIS SCOTT | CHANCE THE RAPPER |</h2>
+  <%- end -%>
 </body>
 </html>
