--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,6 @@
   width: auto;
   font-family: 'Raleway', sans-serif;
   z-index: 10;
-  animation: spin__circle 6s ease-out forwards, disappear 1s 6s forwards, reappear 2s 8s forwards
 }
 
 .artist__text {
@@ -28,7 +27,20 @@
   font-family: 'Raleway', sans-serif;
   z-index: 10;
   text-align: center;
-  animation: reappear 1s 6s forwards
+}
+
+.artist__text--active {
+  position: absolute;
+  right: 12%;
+  top: 53%;
+  font-size: 5vmin;
+  height: auto;
+  color: white;
+  width: 15%;
+  font-family: 'Raleway', sans-serif;
+  z-index: 10;
+  text-align: center;
+  animation: reappear 1s 2s forwards
 }
 
 .home__wheel {
@@ -359,7 +371,7 @@
     transform:rotate(0deg)
   }
   to {
-    transform:rotate(720deg)
+    transform:rotate(360deg)
   }
 }
 
