--- a/app/assets/stylesheets/home_phone.scss
+++ b/app/assets/stylesheets/home_phone.scss
@@ -308,6 +308,14 @@
   overflow: hidden;
 }
 
+.artist__text--active {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+
 @keyframes mac_home {
     from {
         transform:rotate(0deg);
