--- a/app/assets/stylesheets/home_tablet.scss
+++ b/app/assets/stylesheets/home_tablet.scss
@@ -307,6 +307,13 @@
   overflow: hidden;
 }
 
+.artist__text--active {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
 @keyframes mac_home {
     from {
         transform:rotate(0deg);
