--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -1086,11 +1086,12 @@
 
 .flash--active {
   position: absolute;
-  left: 70%;
+  left: 60%;
   top: 2%;
-  width: auto;
+  width: 35%;
   font-family: 'Raleway', sans-serif;
   background: #DFF3D8;
+  text-align: center;
   color: black;
   z-index: 17;
   border-radius: 15%;
