--- a/app/assets/stylesheets/video_phone.scss
+++ b/app/assets/stylesheets/video_phone.scss
@@ -905,13 +905,14 @@
 
   .flash--active {
     position: absolute;
-    left: 25%;
+    left: 0%;
     top: 5%;
-    width: auto;
+    width: 100%;
     font-family: 'Raleway', sans-serif;
     font-size: 2.5vmin;
     background: #DFF3D8;
     color: black;
+    text-align: center;
     z-index: 17;
     border-radius: 15%;
     animation: disappear 1.5s 2s;
