--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -42,7 +42,8 @@
 
 .vote--video--active {
   position: absolute;
-  height: 0%;
-  width: 0%;
+  top: 100%;
+  height: 5%;
+  width: 100%;
   overflow: hidden;
 }
