--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -47,3 +47,25 @@
   width: 100%;
   overflow: hidden;
 }
+
+.song__playlist {
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 40%;
+  height: 60%;
+  overflow: scroll;
+  background: black;
+  border: solid red 1px;
+}
+
+.song__playlist__title {
+  position: absolute;
+  height: 20%;
+  width: 100%;
+  background: white;
+  z-index: 6;
+  color: black;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
