--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -69,3 +69,60 @@
   text-align: center;
   font-family: 'Raleway', sans-serif;
 }
+
+.songs__in__playlist {
+  position: relative;
+  top: 30%;
+  padding: 5%;
+  color: white;
+  border: solid 1px white;
+  font-family: 'Raleway', sans-serif;
+  cursor: pointer;
+}
+
+.play__button--playlist {
+  position: absolute;
+  left: 5%;
+  top: 20%;
+  height: 20%;
+  width: 15%;
+  background: black;
+  z-index: 10;
+}
+
+.play__button--play {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
+.play__button--play--active {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  width: 0;
+  height: 0;
+  border-top: 5vh solid transparent;
+  border-bottom: 5vh solid transparent;
+  border-left: 5vh solid white;
+  cursor: pointer;
+}
+
+.play__button--stop--active {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  width: 0;
+  height: 0;
+  border: 5vh solid transparent;
+  border: 5vh solid transparent;
+  border: 5vh solid white;
+}
+
+.play__button--stop {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
