--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -130,9 +130,34 @@
 
 .black__screen {
   position: absolute;
-  top: 90%;
-  height: 10%;
+  top: 85%;
+  height: 15%;
   width: 100%;
   background: black;
   z-index: 22;
+}
+
+.under {
+  position: absolute;
+  height: 0%;
+  width: 0%;
+  overflow: hidden;
+}
+
+.under--active {
+  position: absolute;
+  top: 85%;
+  left: 42.5%;
+  height: 15%;
+  width: 15%;
+  z-index: 30;
+}
+
+.right--arrow {
+  position: absolute;
+  right: 15%;
+  height: 100%;
+  width: 10%;
+  background: red;
+  cursor: pointer;
 }
