--- a/app/assets/stylesheets/vote.scss
+++ b/app/assets/stylesheets/vote.scss
@@ -161,3 +161,12 @@
   background: red;
   cursor: pointer;
 }
+
+.left--arrow {
+  position: absolute;
+  left: 15%;
+  height: 100%;
+  width: 10%;
+  background: green;
+  cursor: pointer;
+}
